--- a/file/src/main/res/layout/activity_zfile_list.xml
+++ b/file/src/main/res/layout/activity_zfile_list.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:background="@color/colorBackground"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/zfile_list_toolBar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/zfile_base_color"
-        tools:navigationIcon="@drawable/zfile_back"
         app:popupTheme="@style/ZFile_ToolbarPopupTheme"
         app:theme="@style/ZFile_ToolbarTheme"
-        app:titleTextAppearance="@style/ZFile_ToolbarTitleTextStyle">
+        app:titleTextAppearance="@style/ZFile_ToolbarTitleTextStyle"
+        tools:navigationIcon="@drawable/zfile_back">
 
         <TextView
             android:id="@+id/zfile_list_centerTitle"
@@ -22,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/zfile_white"
+            android:textColor="@color/zfile_title_text"
             android:textSize="18sp"
             android:visibility="gone"
             tools:text="@string/zfile_title" />
@@ -33,8 +34,7 @@
         android:id="@+id/zfile_list_pathRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/zfile_default_divider_padding"
-        android:layout_marginEnd="@dimen/zfile_default_divider_padding" />
+        android:paddingHorizontal="@dimen/zfile_default_divider_padding" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -57,14 +57,14 @@
             android:id="@+id/zfile_list_emptyLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            android:background="@color/zfile_white">
+            android:background="@color/colorBackground"
+            android:visibility="gone">
 
             <com.airbnb.lottie.LottieAnimationView
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                app:lottie_autoPlay="true"
                 android:layout_gravity="center"
+                app:lottie_autoPlay="true"
                 app:lottie_fileName="weather_no_data.json"
                 app:lottie_loop="true" />
 
@@ -74,30 +74,30 @@
             android:id="@+id/zfile_list_errorLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
-            tools:visibility="visible"
+            android:background="@color/colorBackground"
             android:gravity="center"
             android:orientation="vertical"
-            android:background="@color/zfile_white">
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="15sp"
                 android:layout_marginStart="35dp"
                 android:layout_marginEnd="35dp"
+                android:text="@string/zfile_permission_bad2"
                 android:textColor="@color/zfile_no_permissions_color1"
-                android:text="@string/zfile_permission_bad2"/>
+                android:textSize="15sp" />
 
             <Button
                 android:id="@+id/zfile_list_againBtn"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/zfile_permission_bad3"
                 android:layout_gravity="end"
-                android:layout_marginEnd="35dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginEnd="35dp"
+                android:text="@string/zfile_permission_bad3"
                 android:textColor="@color/zfile_no_permissions_color2" />
 
         </LinearLayout>
