--- a/file/src/main/res/layout/item_zfile_path.xml
+++ b/file/src/main/res/layout/item_zfile_path.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="25dp"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/item_zfile_path_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginEnd="3dp"
+        android:textColor="@color/zfile_file_title"
+        android:gravity="center"
         tools:text="根目录" />
 
     <ImageView
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:padding="1dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_zfile_right_back"/>
+        android:padding="1dp"
+        android:src="@drawable/ic_zfile_right_back" />
 
 </LinearLayout>
