--- a/file/src/main/res/menu/zfile_list_menu.xml
+++ b/file/src/main/res/menu/zfile_list_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_zfile_search"
+        android:icon="@drawable/menu_search"
+        android:title="@string/zfile_menu_search"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/menu_zfile_down"
         android:title="@string/zfile_menu_down"
         android:visible="false"
