--- a/file/src/main/res/values-zh-rCN/string.xml
+++ b/file/src/main/res/values-zh-rCN/string.xml
@@ -7,6 +7,7 @@
     <!--   下面重写即可自定义   -->
     <string name="zfile_title">文件管理</string>
     <string name="zfile_menu_down">完成</string>
+    <string name="zfile_menu_search">搜索</string>
     <string name="zfile_root_path">根目录</string>
     <string name="zfile_path">指定目录</string>
     <string name="zfile_menu_order">排序方式</string>
