模拟没有文件操作

--- a/file/src/main/res/layout/activity_search.xml
+++ b/file/src/main/res/layout/activity_search.xml
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingHorizontal="24dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <FrameLayout
             android:id="@+id/search_list_emptyLayout"
