状态栏的反色

--- a/file/src/main/res/values/colors.xml
+++ b/file/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
     <color name="colorBackground">#f7f7f7</color>
     <color name="zfile_path_back">#E1E1E1</color>
 
-    <color name="title_icon_normal">#333333</color>
+    <color name="title_icon_normal">#ffffff</color>
     <color name="title_icon_pressed">#999999</color>
 
     <color name="item_no_selected_bg">#ededed</color>
