--- a/app/src/main/res/layout/item_dialog_super.xml
+++ b/app/src/main/res/layout/item_dialog_super.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
-    android:background="?selectableItemBackground">
+    android:layout_height="wrap_content"
+    android:background="@color/zfile_file_back"
+    android:minHeight="50dp"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,9 +22,8 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="#000000"
-            android:textSize="15sp"
-            android:textStyle="bold"
+            android:textColor="@color/zfile_file_title"
+            android:textSize="14sp"
             tools:text="我是文件名名称" />
 
         <LinearLayout
@@ -35,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/zfile_bbbbb9"
                 android:textSize="12sp"
                 tools:text="2020-1-1 10:00:21" />
 
@@ -44,6 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/zfile_bbbbb9"
                 android:textSize="12sp"
                 tools:text="10M" />
 
@@ -54,7 +57,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:layout_gravity="bottom"
-        android:background="#f2f2f2" />
+        tools:background="@color/zfile_line_color" />
 
-</FrameLayout>
+</LinearLayout>
