--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorAccent">@color/zfile_base_color</item>
+        <item name="colorPrimaryDark">@color/zfile_base_color</item>
+        <item name="colorPrimary">@color/zfile_base_color</item>
+        <item name="android:windowBackground">@color/zfile_bgcolor</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentTransitions">true</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
     </style>
 
     <style name="SunTheme" parent="AppTheme">
