适配横屏、多语言

--- a/app/src/main/res/layout-land/activity_super.xml
+++ b/app/src/main/res/layout-land/activity_super.xml
@@ -13,12 +13,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:gravity="center"
-            android:padding="20dp"
+            android:padding="5dp"
             android:text="@string/app_name"
             android:textColor="@color/zfile_file_title"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="bold" />
 
         <TextView
@@ -81,17 +80,10 @@
                     android:text="@string/file_audio"
                     android:textColor="@color/btn_search_activity_cancel" />
 
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/zfile_line_color" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
+                <View
+                    android:layout_width="0.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/zfile_line_color" />
 
                 <TextView
                     android:id="@+id/super_fileTxt"
@@ -132,6 +124,7 @@
                     android:gravity="center"
                     android:text="@string/file_apk"
                     android:textColor="@color/btn_search_activity_cancel" />
+
 
             </LinearLayout>
 
@@ -185,17 +178,10 @@
                     android:text="@string/file_dsl"
                     android:textColor="@color/btn_search_activity_cancel" />
 
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/zfile_line_color" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal">
+                <View
+                    android:layout_width="0.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/zfile_line_color" />
 
                 <TextView
                     android:id="@+id/super_qqTxt"
@@ -237,7 +223,9 @@
                     android:text="@string/file_placeholder"
                     android:textColor="@color/btn_search_activity_cancel" />
 
+
             </LinearLayout>
+
 
         </LinearLayout>
 
