--- a/app/src/main/res/layout-land/activity_super.xml
+++ b/app/src/main/res/layout-land/activity_super.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="5dp"
+            android:padding="2dp"
             android:text="@string/app_name"
             android:textColor="@color/zfile_file_title"
             android:textSize="19sp"
@@ -31,7 +31,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginHorizontal="50dp"
+            android:layout_marginVertical="10dp"
             android:background="@drawable/btn_back_normal"
             android:orientation="vertical">
 
@@ -124,7 +125,6 @@
                     android:gravity="center"
                     android:text="@string/file_apk"
                     android:textColor="@color/btn_search_activity_cancel" />
-
 
             </LinearLayout>
 
@@ -223,17 +223,14 @@
                     android:text="@string/file_placeholder"
                     android:textColor="@color/btn_search_activity_cancel" />
 
-
             </LinearLayout>
-
 
         </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp">
+            android:layout_marginHorizontal="50dp">
 
             <TextView
                 android:id="@+id/super_innerTxt"
@@ -250,7 +247,7 @@
             android:id="@+id/super_resultTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp" />
+            android:padding="10dp" />
 
     </LinearLayout>
 
