--- a/file/src/main/res/values-night/colors.xml
+++ b/file/src/main/res/values-night/colors.xml
@@ -5,6 +5,9 @@
 
     <color name="zfile_base_color">#000000</color>
 
+    <color name="zfile_gray">#66E0E0F0</color>
+    <color name="zfile_title_selected">#CCE0E0F0</color>
+
     <color name="zfile_line_color">#3f3f46</color>
     <color name="zfile_bbbbb9">#939392</color>
 
