--- a/file/src/main/res/layout/activity_zfile_qw.xml
+++ b/file/src/main/res/layout/activity_zfile_qw.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/zfile_white"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -36,8 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         app:tabTextColor="@color/zfile_gray"
-        app:tabSelectedTextColor="@color/zfile_base_color"
-        android:background="@color/zfile_bgcolor">
+        app:tabSelectedTextColor="@color/zfile_title_selected"
+        android:background="@color/colorBackground">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
