--- a/file/src/main/res/values/colors.xml
+++ b/file/src/main/res/values/colors.xml
@@ -4,12 +4,13 @@
     <color name="zfile_base_color">#03A9F4</color>
     <color name="zfile_black">#000000</color>
     <color name="zfile_gray">#666666</color>
+    <color name="zfile_title_selected">#131313</color>
     <color name="zfile_white">#ffffff</color>
     <color name="zfile_green">#2c832e</color>
     <color name="zfile_red">#e01d07</color>
     <color name="zfile_bbbbb9">#bbbbb9</color>
     <color name="zfile_line_color">#f2f2f2</color>
-    <color name="zfile_bgcolor">#f2f2f2</color>
+    <color name="zfile_bgcolor">#f7f7f7</color>
     <color name="zfile_no_permissions_color1">@color/zfile_gray</color>
     <color name="zfile_no_permissions_color2">@color/zfile_green</color>
 
