--- a/file/src/main/res/layout/activity_zfile_qw.xml
+++ b/file/src/main/res/layout/activity_zfile_qw.xml
@@ -30,38 +30,15 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/zfile_qw_tabLayout"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         app:tabTextColor="@color/zfile_gray"
         app:tabSelectedTextColor="@color/zfile_title_selected"
-        android:background="@color/colorBackground">
+        android:background="@color/colorBackground" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/zfile_pic" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/zfile_video" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/zfile_txt" />
-
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/zfile_other" />
-
-    </com.google.android.material.tabs.TabLayout>
-
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/zfile_qw_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
