--- a/app/src/main/res/layout/activity_dsl.xml
+++ b/app/src/main/res/layout/activity_dsl.xml
@@ -34,7 +34,9 @@
             android:layout_height="wrap_content"
             android:text="fragment"/>
 
-        <include layout="@layout/layout_result_txt" />
+        <include
+            android:id="@+id/dsl_include"
+            layout="@layout/layout_result_txt" />
 
     </LinearLayout>
 
