--- a/app/src/main/res/layout/activity_fragment_sample2.xml
+++ b/app/src/main/res/layout/activity_fragment_sample2.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/fs2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fs2_vp"
         android:visibility="gone"
         android:layout_width="match_parent"
