--- a/file/src/main/res/layout/activity_zfile_qw.xml
+++ b/file/src/main/res/layout/activity_zfile_qw.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/zfile_white"
+            android:textColor="@color/zfile_title_text"
             android:textSize="18sp"
             android:visibility="gone"
             tools:text="@string/zfile_title" />
