优化布局深色模式

--- a/file/src/main/res/layout/dialog_zfile_audio_play.xml
+++ b/file/src/main/res/layout/dialog_zfile_audio_play.xml
@@ -29,7 +29,7 @@
             android:layout_gravity="center"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/zfile_black"
+            android:textColor="@color/zfile_file_title"
             tools:text="我是音频文件.mp3" />
 
     </LinearLayout>
